RESOLVED FIXED62307
Fix clang issue, virtual function const mismatch
https://bugs.webkit.org/show_bug.cgi?id=62307
Summary Fix clang issue, virtual function const mismatch
James Simonsen
Reported 2011-06-08 12:40:50 PDT
Fix clang issue, virtual function const mismatch
Attachments
Patch (1.48 KB, patch)
2011-06-08 12:47 PDT, James Simonsen
tonyg: review+
James Simonsen
Comment 1 2011-06-08 12:47:48 PDT
James Simonsen
Comment 2 2011-06-08 13:44:01 PDT
Darin Adler
Comment 3 2011-06-08 15:43:56 PDT
Comment on attachment 96463 [details] Patch This almost certainly had some real symptom too. When possible we try to make a test case to show what was broken.
James Simonsen
Comment 4 2011-06-09 13:41:31 PDT
(In reply to comment #3) > (From update of attachment 96463 [details]) > This almost certainly had some real symptom too. When possible we try to make a test case to show what was broken. Fortunately, the code was only broken in the tree for several hours. Chromium runs clang on all WebKit rolls and those happen a few times a day. I expect that we'll catch these sorts of bugs pretty quickly. I hope someone is working on a Clang EWS bot. That would be even quicker at detecting these sorts of problems.
Adam Barth
Comment 5 2011-06-09 14:23:26 PDT
> I hope someone is working on a Clang EWS bot. That would be even quicker at detecting these sorts of problems. Great idea. I'll talk to Nico about that.
Adam Barth
Comment 6 2011-06-09 14:28:48 PDT
The instructions are here. We'll need to adapt them a bit to work for WebKit: http://code.google.com/p/chromium/wiki/Clang This isn't high on my priority list, but it definitely sounds like something we should do.
Note You need to log in before you can comment on or make changes to this bug.