2011-06-08  James Simonsen  <simonjam@chromium.org>

Reviewed by Tony Gentilcore.

        Fix clang issue, virtual function const mismatch
        https://bugs.webkit.org/show_bug.cgi?id=62307

        No new tests. Built with clang & ran layout tests.

        * page/MediaStreamFrameController.h:
        (WebCore::MediaStreamFrameController::GenericClient::isGenericClient):

git-svn-id: svn://svn.chromium.org/blink/trunk@88382 bbb929c8-8fbe-4397-9dbb-9b2b20218538